# bedrock-kb-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml  test_mcp_server.py
src/bedrock_kb_mcp_server/: __init__.py  bedrock_client.py  main.py  models.py  types.py  utils.py
